--- a/angular.json
+++ b/angular.json
@@ -72,9 +72,12 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/moment/min/moment.min.js"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
